--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -22,6 +22,7 @@
     // Interpolated
 
     // Styled
+    // console.log('%c Hello I am new style', 'font-size: 50px')
 
     // warning!
 
@@ -30,16 +31,25 @@
     // Info
 
     // Testing
+    console.assert(1===2, 'equal');
 
     // clearing
 
     // Viewing DOM Elements
+    const p = document.querySelector('p');
+    console.dir(p);
 
     // Grouping together
-
+    dogs.map(dog => {
+      console.group(`${dog.name}`);
+      console.log(`dos name is ${dog.name}`);
+      console.log(`dos age is ${dog.age}`);
+    });
     // counting
 
     // timing
+
+    console.table(dogs);
 
   </script>
 </body>
